# FFmpegPlayer

./: .gitignore  .gitmodules  CMakeLists.txt  MyMainWindows.cpp  MyMainWindows.h  main.cpp  resources.qrc
resources/translations/: en.qm
src/DirectShow/: UVC_Win_DShow.cpp
src/FFmpeg/: FFmpegPlayer.cpp  FFmpegPlayer.h  FFmpegRecorder.cpp  FFmpegRecorder.h
src/FileTools/: Microscope_Utils_Config.cpp  Microscope_Utils_Config.h
src/OperateWidget/: CameraSettingPage.cpp  CameraSettingPage.h  CameraSwitchingPage.cpp  CameraSwitchingPage.h  ImageCapturePage.cpp  ImageCapturePage.h
src/Ui/: StackedWidget.cpp  StackedWidget.h  SwingArmView.cpp  SwingArmView.h  ToolScrollWidget.cpp  ToolScrollWidget.h  ToolWidget.cpp  ToolWidget.h  VerticalRulerView.cpp  VerticalRulerView.h  VideoView.cpp  VideoView.h  VideoWidget.cpp  VideoWidget.h
translations/: en.ts
